# playwright-changesets

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  hello.py  pyproject.toml  screenshot.py
src/: changeset_extractor.py  model.py  osmcha.py  screenshot.py
